fix scrolling issue and the book image not showing

--- a/app/globals.css
+++ b/app/globals.css
@@ -152,12 +152,12 @@ a {
   max-width: 50vw;
 }
 
-.blur-blob.cyan {
+/* .blur-blob.cyan {
   background: #9d6adf;
   right: -5%;
   bottom: 0;
   max-width: 50vw;
-}
+} */
 
 /* Floating Animations */
 @keyframes float {
